--- a/index.css
+++ b/index.css
@@ -15,3 +15,8 @@
   opacity: 1;
   max-width: 50px; /* More than it will ever come, notice that this affects on animation duration */
 }
+
+.copyright-footer {
+    width: 50%;
+    margin: 0 auto 3%;
+}
