--- a/index.css
+++ b/index.css
@@ -16,6 +16,10 @@
   max-width: 50px; /* More than it will ever come, notice that this affects on animation duration */
 }
 
+#loader {
+    display:none
+}
+
 .copyright-footer {
     width: 50%;
     margin: 0 auto 3%;
