--- a/index.css
+++ b/index.css
@@ -42,6 +42,11 @@
     margin-top: 4%;
 }
 
+.legend {
+	width: 40%;
+	margin: 15px auto;
+}
+
 .copyright-footer {
     width: 50%;
     margin: 0 auto 3%;
